# keyboard

./: .gitignore  Cargo.toml  README.md
src/: counter.rs  evaluate.rs  ferris.rs  iter.rs  keyboard.rs  layout.rs  main.rs  optimization.rs  output.rs  qmk.rs
