[package]
name = "keyboard"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[dependencies]
anyhow = "1.0.97"
array_map = { version = "0.4.0", features = ["derive"] }
arrayvec = "0.7.6"
bincode = "1.3.3"
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["add", "add_assign", "sum"] }
glam = "0.30.0"
macro_rules_attribute = "0.2.0"
notify-rust = { version = "4.11.5" }
num_enum = "0.7.3"
ordered-float = "5.0.0"
rand = "0.9.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
walkdir = "2.5.0"
